# thinkaroo

./: CLAUDE.md  Cargo.toml
prompts/: math_problem.toml  reading_comprehension.toml  vocabulary_exercise.toml
src/: keyvalue.rs  lib.rs  main.rs  state.rs  storage.rs
src/prompts/: mod.rs
src/reading/: mod.rs
static/: home.html  reading.html
