[package]
name = "thinkaroo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
aws-config = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-s3 = "1"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
