[package]
name = "thinkaroo"
version = "0.1.0"
edition = "2024"

[lib]
name = "thinkaroo"
path = "src/lib.rs"

[dependencies]
async-openai = "0.24"
async-trait = "0.1"
axum = "0.8"
aws-config = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
chrono = "0.4"
include_dir = "0.7"
rand = "0.8"
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
